persistent connection support for http1.1 and also compression with gzip implemented.